stoat/src/snapshots/stoat__test_harness__chat_replay_streamed_text_then_final_and_result_step_05_result.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[38;2;128;128;128mClaude[0m











[0m[38;2;204;204;204m| Directory | Primary Language |[0m
[0m[38;2;204;204;204m|---|---|[0m
[0m[38;2;204;204;204m| `action/` | Rust |[0m
[0m[38;2;204;204;204m| `agent/` | Rust |[0m
[0m[38;2;204;204;204m| `vendor/` | (vendor deps) |[0m
[0m[38;2;204;204;204m| `viewport/` | Rust |[0m

[0m[38;2;128;128;128m--------------------------------------------------------------------------------[0m
[0m[38;2;160;160;160m  58.3s[0m
[0m[38;2;128;128;128m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[48;2;78;201;176m PMT [0m[1m[38;2;204;204;204m[48;2;30;30;30m (unnamed) [0m[38;2;204;204;204m[48;2;30;30;30m[claude]                                                        [0m
