stoat/src/snapshots/stoat__test_harness__chat_replay_thinking_then_text_step_02_text.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[38;2;128;128;128mClaude[0m

















[0m[3m[38;2;128;128;128m~ Thinking... (3 lines)[0m

[0m[38;2;204;204;204mDone thinking.[0m
[0m[38;2;128;128;128m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[48;2;78;201;176m PMT [0m[1m[38;2;204;204;204m[48;2;30;30;30m (unnamed) [0m[38;2;204;204;204m[48;2;30;30;30m[claude]                                                        [0m
