stoat/src/snapshots/stoat__test_harness__chat_replay_tool_use_no_result_yet_step_01_tool_use_pending.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[90mClaude[0m


















[0m[34m⏺ Bash(ls)[0m
[0m[35m  running[0m
[0m[90m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                                                        [0m
